--- a/manifest.json
+++ b/manifest.json
@@ -19,5 +19,8 @@
     ],
     "options_ui": {
         "page": "options/options.html"
-    }
+    },
+    "permissions": [
+        "storage"
+    ]
 }
