--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,9 @@
             "js": ["content.js"]
         }
     ],
+    "background": {
+        "scripts": ["background.js"]
+    },
     "host_permissions": [
         "https://github.com/*/*/issues"
     ],
