--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,9 @@
     "version": "0.1",
     "description": "Simple browser add-on for GitHub to add tasks count on the issues page",
     "icons": {
-        "32": "icon.svg",
-        "64": "icon.svg",
-        "128": "icon.svg"
+        "32": "icons/icon_32.png",
+        "64": "icons/icon_64.png",
+        "128": "icons/icon_128.png"
     },
     "content_scripts": [
         {
@@ -28,7 +28,10 @@
         "storage"
     ],
     "action": {
-        "default_icon": "icon.svg",
+        "default_icon": {
+            "16": "icons/icon_16.png",
+            "32": "icons/icon_32.png"
+        },
         "default_title": "TickBack",
         "default_popup": "popup/popup.html"
     }
