--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
         "request": "launch",
         "reAttach": true,
         "name": "Launch add-on",
-        "addonPath": "${workspaceFolder}",
+        "addonPath": "${workspaceFolder}/src",
         "url": "https://github.com/Ja-Tar/TickBack/issues",
         "reloadOnAttach": true    
     }
