add testing profile

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,7 @@
         "name": "Launch add-on",
         "addonPath": "${workspaceFolder}/src",
         "url": "https://github.com/Ja-Tar/TickBack/issues",
+        "profile": "testprofile",
         "reloadOnAttach": true    
     }
     ]
