--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "TickBack",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Simple browser add-on for GitHub to add tasks count on the issues page",
   "icons": {
     "32": "icons/icon_32.png",
@@ -44,7 +44,8 @@
   "web_accessible_resources": [
     {
       "resources": [
-        "icons/iconoir/*.svg"
+        "icons/iconoir/*.svg",
+        "styles/*.css"
       ],
       "matches": [
         "https://github.com/*/*"
