--- a/src/manifest.json
+++ b/src/manifest.json
@@ -20,9 +20,7 @@
     }
   ],
   "background": {
-    "scripts": [
-      "background.js"
-    ]
+    "service_worker": "background.js"
   },
   "host_permissions": [
     "https://github.com/*/*"
@@ -48,7 +46,7 @@
         "styles/*.css"
       ],
       "matches": [
-        "https://github.com/*/*"
+        "https://github.com/*"
       ]
     }
   ],
