--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ permissions:
   contents: write
 
 jobs:
-  sign:
+  build_firefox:
     name: "Release"
     runs-on: ubuntu-latest
     steps:
@@ -50,3 +50,22 @@ jobs:
         run: |
           gh release upload ${{ github.event.release.tag_name }} \
             ${{ steps.web-ext-sign.outputs.target }}
+
+  build_chrome:
+    name: "Release Chrome"
+    runs-on: ubuntu-latest
+    steps:
+      - name: "Checkout"
+        uses: actions/checkout@v4
+
+      - name: "Make zip"
+        run: |
+          cd src_chrome
+          zip -r ../${{ github.event.release.tag_name }}.zip .
+
+      - name: "Attach release assets to release"
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          gh release upload ${{ github.event.release.tag_name }} \
+            ${{ github.event.release.tag_name }}.zip
