--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -29,4 +29,4 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v6
         with:
           commit_message: "chore: bump version to ${{ github.event.inputs.new_version }}"
-          file_pattern: src/manifest.json
+          file_pattern: src/manifest.json src_chrome/manifest.json
