--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: "Run reformat from firefox to chrome"
-        run: python3 .github/scripts/reformat_firefox_to_chrome.py
+        run: python3 reformat_firefox_to_chrome.py
 
       - name: "Upload Artifact"
         uses: actions/upload-artifact@v4
